WISH: skipscroll option
WISH: selection-color-pair instead of reverse video
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
WISH: anyevent mouse notification / manage MotionMask better.
WISH: kick out xpm.C, replace by pixbuf
DUMB: support tex fonts

TODO: skipscorll option
8.
	- initial transparency improvement/afterstep support
          patch by Sasha Vasko.
	- nuke reconf script, serves no purpose anymore.
        - do not process focus events caused by grabs
          (patch by Mikachu).
        - better option handling, support more than 30 options (exg).
        - add urgentOnBell resource to set the urgency hint
          (patch by Philip Paeps).
        - add binding for backspace in iso14755 5.1 to remove the last
          digit.
        - go with the times and expect x11 library files in /usr/lib, not
          /usr/X11R6/lib.
        - add iso14755_52 resource to disable iso14755 5.2.

8.2  Sat Feb 17 21:35:28 CET 2007
	- fix make depend in src/, reported by exg.
        - fixed typo in urxvt::GET_CUSTOM, causing the result to be wrong.
          (patch by Sergey Vlasov).
        - unbundled iom perl interface somewhat.
        - scrollbar-xterm now uses the selected scrollColor instead of fg
          (found by Aiviru).
        - disabled linux kernel bug workaround again: disabling it gives
          a 50% speed hit on affected machines, while enabling it gives
          a similar speed hit to screen, which is likely the more common
          case to work around for :/
        - urxvt::rend2mask perl function, and utilization of it by matcher
          (patch by Moshe Kamensky).
        - use perl:matcher on a keysym to open most recently displayed URL.
        - with matcher, when multiple patterns match, last wins, not first.
        - fix make and make install with srcdir != builddir.
        - updated bundled libptytty to fix a bug where the tty would be kept