@@ -447,7 +447,8 @@ bool rxvt_display::ref_init ()
 
 #ifdef HAVE_AFTERIMAGE
   ::dpy = dpy; /* init global var from libAfter... */
-  asv = create_asvisual_for_id( dpy, screen, DefaultDepth(dpy,screen), XVisualIDFromVisual(DefaultVisual(dpy,screen)), None, NULL );
+  asv = create_asvisual_for_id (dpy, screen, DefaultDepth (dpy,screen),
+                                XVisualIDFromVisual (DefaultVisual (dpy, screen)), None, NULL);
 #endif
 
   assert (sizeof (xa_names) / sizeof (char *) == NUM_XA);
